# PyCrucible

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmarks.md  dist-workspace.toml  pycrucible.example.toml  pycrucible.toml.example  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: benchmarks.yml  better-uv-download-logic.yml  native_pipeline.yml  no-uv-embed-test.yml  pycrucible_pipeline.yml  run_test_app.yml  rust.yml  v0.3-pipeline.yml
benchmarks/: run_benchmarks.py
benchmarks/projects/cowsay_app/: main.py  pyproject.toml
benchmarks/projects/fastapi_app/: app.py  pyproject.toml
benchmarks/projects/flask_app/: app.py  pyproject.toml
benchmarks/projects/heavy_deps/: main.py  pyproject.toml
benchmarks/projects/many_files/: generate.py  pyproject.toml
benchmarks/projects/pygame_app/: main.py  pyproject.toml
pycrucible/: Cargo.toml  build.rs
pycrucible/src/: cli.rs  main.rs  payload.rs  project.rs  runner.rs  runner_handler.rs  runner_utils.rs  uv_handler.rs
pycrucible/wix/: main.wxs
python-wrapper/: README.md  pyproject.toml
python-wrapper/src/pycrucible/: __main__.py
runner/: Cargo.toml
runner/src/: extract.rs  main.rs  repository.rs  run.rs
shared/: Cargo.toml
shared/src/: config.rs  debuging.rs  footer.rs  lib.rs  payload.rs  repository.rs  spinner.rs  uv_handler.rs  uv_handler_v2.rs  workspace_utils.rs
shared/src/uv_handler/: download.rs  extract.rs  install.rs  mod.rs  platform.rs  uv_handler_core.rs  uv_handler_unix.rs  uv_handler_windows.rs
src/: cli.rs  config.rs  main.rs  payload.rs  project.rs  repository.rs  runner.rs  spinner_utils.rs  uv_handler.rs
src/launcher/: config.rs  generator.rs  mod.rs  template.rs
tests/: integration_test.rs
