[package]
name = "pycrucible"
description = "A cross-platform Python project embedder"
repository = "https://github.com/razorblade23/PyCrucible"
authors = ["razorblade23 <contact@razorblade23.dev>"]
version = "0.3.9"
edition = "2024"

[package.metadata.rust-analyzer]
cfg = ["rust_analyzer"]

[package.metadata.wix]
upgrade-guid = "475C45FC-43C9-4FB5-BD64-5B553513F1BF"
path-guid = "A05059C3-3FD0-4382-A8A1-186B455AD63C"
license = false
eula = false

[dependencies]
shared = { path = "../shared" }
walkdir = "2.4"
maplit = "1.0"
lazy_static = "1.4"
once_cell = "1.18"
toml = "0.8"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
spinners = "4"
zip = "3"
tar = "0.4"
glob = "0.3"
tempfile = "3"
flate2 = "1"
git2 = { version = "0.20", default-features = false }
which = "8.0.0"
