[project]
name = "pycrucible"
version = "0.2.8"
description = "Python wrapper for the PyCrucible CLI tool"
requires-python = ">=3.6"
authors = [{ name = "razorblade23", email = "contact@razorblade23.dev" }]
readme = "README.md"
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3",
                "Programming Language :: Rust",
                "License :: OSI Approved :: MIT License",
                "Operating System :: OS Independent",
                "Intended Audience :: Developers",
                "Topic :: Software Development :: Build Tools",
]
scripts = { pycrucible = "pycrucible.__main__:main" }
dependencies = []
keywords = ["install", "python installer", "install python", "python packaging", "python build tool", "pycrucible", "pyinstaller", "py2exe", "python wrapper", "python cli tool"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/razorblade23/PyCrucible"
Repository = "https://github.com/razorblade23/PyCrucible.git"
Issues = "https://github.com/razorblade23/PyCrucible/issues"